Implemented tf-idf

--- a/model/Data_Preprocessing.ipynb
+++ b/model/Data_Preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -99,8 +99,8 @@
     "    clean_comments = []\n",
     "\n",
     "    for i,k in enumerate(train_data[\"comment_text\"]):\n",
-    "        #clean_comment = clean_data(k)\n",
-    "        clean_comment = k\n",
+    "        clean_comment = clean_data(k)\n",
+    "        #clean_comment = k\n",
     "        clean_comments.append(clean_comment)\n",
     "\n",
     "        if((i+1)%10000==0):\n",
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -186,6 +186,7 @@
     "# train_labels = (train_data[\"toxic\"] | train_data[\"severe_toxic\"] | train_data[\"obscene\"] | train_data[\"threat\"] | train_data[\"insult\"] | train_data[\"identity_hate\"])\n",
     "# clean_comments = remove_stop_words(train_data)\n",
     "# ret=make_feature_vec(clean_comments)\n",
+    "\n",
     "\n",
     "\n",
     "# scipy.sparse.save_npz('../data/Processed/sparse_train_matrix.npz', ret['train_feature_vectors_sparse'])\n",
@@ -225,15 +226,6 @@
     "# train_feature_vectors_sparse[1,12051]\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
