--- a/model/naive_bayes.ipynb
+++ b/model/naive_bayes.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -252,61 +252,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(59570, 168595)"
+       "TfidfTransformer(norm=None, smooth_idf=True, sublinear_tf=False, use_idf=True)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from sklearn.feature_extraction.text import TfidfTransformer\n",
-    "tf_transformer = TfidfTransformer(use_idf=False).fit(train_feature_vectors_sparse)\n",
-    "X_train_tf = tf_transformer.transform(train_feature_vectors_sparse)\n",
-    "X_train_tf.shape\n",
-    "\n",
-    "tf_transformer = TfidfTransformer(use_idf=False).fit(test_feature_vectors_sparse)\n",
-    "X_test_tf = tf_transformer.transform(test_feature_vectors_sparse)\n",
-    "X_test_tf.shape"
+    "tfidf_transformer = TfidfTransformer(norm=None, use_idf=True, smooth_idf=True, sublinear_tf=False)\n",
+    "X_train_tfidf = tfidf_transformer.fit_transform(train_feature_vectors_sparse)\n",
+    "X_test_tfidf = tfidf_transformer.transform(test_feature_vectors_sparse)\n",
+    "tfidf_transformer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Multinomial NB"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision =  0.799635399403\n",
+      "Recall =  0.456610201571\n",
+      "F_score =  0.581290283718\n",
+      "CCR =  0.883313748531\n",
+      "\n",
+      "Confusion Matrix: \n",
+      " [[47794  5742]\n",
+      " [ 1209  4825]]\n"
+     ]
+    }
+   ],
    "source": [
     "# TRAINING\n",
-    "from sklearn.naive_bayes import ComplementNB\n",
-    "clf = ComplementNB()\n",
-    "clf.fit(X_train_tf, train_labels)\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "clf = MultinomialNB()\n",
+    "clf.fit(X_train_tfidf, train_labels)\n",
     "\n",
     "# PREDICTION\n",
-    "predictions = clf.predict(X_test_tf)\n",
+    "predictions = clf.predict(X_test_tfidf)\n",
     "\n",
     "\n",
     "# PERFORMANCE METRICS\n",
     "\n",
-    "# confmat = sklearn.metrics.confusion_matrix(test_labels, predictions)\n",
+    "confmat = sklearn.metrics.confusion_matrix(test_labels, predictions)\n",
     "\n",
-    "# precision = confmat[1,1]/(confmat[1,1] + confmat[1,0])\n",
-    "# recall = confmat[1,1]/(confmat[1,1] + confmat[0,1])\n",
-    "# fScore = (2*precision*recall)/(recall+precision)\n",
-    "# ccr = (confmat[0,0] + confmat[1,1])/(sum(sum(confmat)))\n",
+    "precision = confmat[1,1]/(confmat[1,1] + confmat[1,0])\n",
+    "recall = confmat[1,1]/(confmat[1,1] + confmat[0,1])\n",
+    "fScore = (2*precision*recall)/(recall+precision)\n",
+    "ccr = (confmat[0,0] + confmat[1,1])/(sum(sum(confmat)))\n",
     "\n",
-    "# print(\"Precision = \",precision)\n",
-    "# print(\"Recall = \",recall)\n",
-    "# print(\"F_score = \",fScore)\n",
-    "# print(\"CCR = \",ccr)\n",
-    "# print()\n",
-    "# print(\"Confusion Matrix: \\n\", confmat)"
+    "print(\"Precision = \",precision)\n",
+    "print(\"Recall = \",recall)\n",
+    "print(\"F_score = \",fScore)\n",
+    "print(\"CCR = \",ccr)\n",
+    "print()\n",
+    "print(\"Confusion Matrix: \\n\", confmat)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Complement NB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision =  0.809744779582\n",
+      "Recall =  0.439428006116\n",
+      "F_score =  0.569696263044\n",
+      "CCR =  0.876095350008\n",
+      "\n",
+      "Confusion Matrix: \n",
+      " [[47303  6233]\n",
+      " [ 1148  4886]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# TRAINING\n",
+    "from sklearn.naive_bayes import ComplementNB\n",
+    "clf = ComplementNB()\n",
+    "clf.fit(X_train_tfidf, train_labels)\n",
+    "\n",
+    "# PREDICTION\n",
+    "predictions = clf.predict(X_test_tfidf)\n",
+    "\n",
+    "\n",
+    "# PERFORMANCE METRICS\n",
+    "\n",
+    "confmat = sklearn.metrics.confusion_matrix(test_labels, predictions)\n",
+    "\n",
+    "precision = confmat[1,1]/(confmat[1,1] + confmat[1,0])\n",
+    "recall = confmat[1,1]/(confmat[1,1] + confmat[0,1])\n",
+    "fScore = (2*precision*recall)/(recall+precision)\n",
+    "ccr = (confmat[0,0] + confmat[1,1])/(sum(sum(confmat)))\n",
+    "\n",
+    "print(\"Precision = \",precision)\n",
+    "print(\"Recall = \",recall)\n",
+    "print(\"F_score = \",fScore)\n",
+    "print(\"CCR = \",ccr)\n",
+    "print()\n",
+    "print(\"Confusion Matrix: \\n\", confmat)"
    ]
   },
   {
