--- a/model/naive_bayes.ipynb
+++ b/model/naive_bayes.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -182,8 +182,8 @@
     "# print(\"Starting to create bag of words...\")\n",
     "# vectorizer_test = CountVectorizer(analyzer=\"word\", tokenizer=None, preprocessor=None, vocabulary=vocab_mapping)\n",
     "# test_feature_vectors_sparse = vectorizer_test.fit_transform(clean_test_comments)\n",
-    "# test_feature_vectors_full = test_feature_vectors_sparse.toarray()\n",
-    "\n",
+    "test_feature_vectors_full = test_feature_vectors_sparse.toarray()\n",
+    "train_feature_vectors_full = train_feature_vectors_sparse.toarray()\n",
     "# print(\"Bag of words created.\")"
    ]
   },
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -363,6 +363,94 @@
     "\n",
     "# PREDICTION\n",
     "predictions = clf.predict(X_test_tfidf)\n",
+    "\n",
+    "\n",
+    "# PERFORMANCE METRICS\n",
+    "\n",
+    "confmat = sklearn.metrics.confusion_matrix(test_labels, predictions)\n",
+    "\n",
+    "precision = confmat[1,1]/(confmat[1,1] + confmat[1,0])\n",
+    "recall = confmat[1,1]/(confmat[1,1] + confmat[0,1])\n",
+    "fScore = (2*precision*recall)/(recall+precision)\n",
+    "ccr = (confmat[0,0] + confmat[1,1])/(sum(sum(confmat)))\n",
+    "\n",
+    "print(\"Precision = \",precision)\n",
+    "print(\"Recall = \",recall)\n",
+    "print(\"F_score = \",fScore)\n",
+    "print(\"CCR = \",ccr)\n",
+    "print()\n",
+    "print(\"Confusion Matrix: \\n\", confmat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iter 1.0 of 100\n",
+      "Iter 2.0 of 100\n",
+      "Iter 3.0 of 100\n",
+      "Iter 4.0 of 100\n",
+      "Iter 5.0 of 100\n",
+      "Iter 6.0 of 100\n",
+      "Iter 7.0 of 100\n",
+      "Iter 8.0 of 100\n",
+      "Iter 9.0 of 100\n",
+      "Iter 10.0 of 100\n",
+      "Iter 11.0 of 100\n",
+      "Iter 12.0 of 100\n",
+      "Iter 13.0 of 100\n",
+      "Iter 14.0 of 100\n",
+      "Iter 15.0 of 100\n",
+      "Iter 16.0 of 100\n",
+      "Iter 17.0 of 100\n",
+      "Iter 18.0 of 100\n",
+      "Iter 19.0 of 100\n",
+      "Iter 20.0 of 100\n",
+      "Iter 21.0 of 100\n",
+      "Iter 22.0 of 100\n",
+      "Iter 23.0 of 100\n",
+      "Iter 24.0 of 100\n",
+      "Iter 25.0 of 100\n",
+      "Iter 26.0 of 100\n",
+      "Iter 27.0 of 100\n",
+      "Iter 28.0 of 100\n",
+      "Iter 29.0 of 100\n",
+      "Iter 30.0 of 100\n",
+      "Iter 31.0 of 100\n",
+      "Iter 32.0 of 100\n",
+      "Iter 33.0 of 100\n",
+      "Iter 34.0 of 100\n",
+      "Iter 35.0 of 100\n",
+      "Iter 36.0 of 100\n",
+      "Iter 37.0 of 100\n",
+      "Iter 38.0 of 100\n",
+      "Iter 39.0 of 100\n",
+      "Iter 40.0 of 100\n",
+      "Iter 41.0 of 100\n",
+      "Iter 42.0 of 100\n",
+      "Iter 43.0 of 100\n",
+      "Iter 44.0 of 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "# TRAINING\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "clf = GaussianNB()\n",
+    "\n",
+    "for i in range(0, 10000):\n",
+    "    if(i%100 == 0):\n",
+    "        \n",
+    "        print(\"Iter\", (i/100) + 1, \"of\", 100)\n",
+    "    clf.partial_fit(train_feature_vectors_full[10*i:10*(i+1), :], train_labels[10*i:10*(i+1)], classes=np.array([0,1]), sample_weight=None)\n",
+    "\n",
+    "# PREDICTION\n",
+    "predictions = clf.predict(test_feature_vectors_full)\n",
     "\n",
     "\n",
     "# PERFORMANCE METRICS\n",
