--- a/data/raw_data/data_from_kaggle.ipynb
+++ b/data/raw_data/data_from_kaggle.ipynb
@@ -37,109 +37,8 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>comment_text</th>\n",
-       "      <th>toxic</th>\n",
-       "      <th>severe_toxic</th>\n",
-       "      <th>obscene</th>\n",
-       "      <th>threat</th>\n",
-       "      <th>insult</th>\n",
-       "      <th>identity_hate</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0000997932d777bf</td>\n",
-       "      <td>Explanation\\nWhy the edits made under my usern...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>000103f0d9cfb60f</td>\n",
-       "      <td>D'aww! He matches this background colour I'm s...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>000113f07ec002fd</td>\n",
-       "      <td>Hey man, I'm really not trying to edit war. It...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0001b41b1c6bb37e</td>\n",
-       "      <td>\"\\nMore\\nI can't make any real suggestions on ...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0001d958c54c6e35</td>\n",
-       "      <td>You, sir, are my hero. Any chance you remember...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                 id                                       comment_text  toxic  \\\n",
-       "0  0000997932d777bf  Explanation\\nWhy the edits made under my usern...      0   \n",
-       "1  000103f0d9cfb60f  D'aww! He matches this background colour I'm s...      0   \n",
-       "2  000113f07ec002fd  Hey man, I'm really not trying to edit war. It...      0   \n",
-       "3  0001b41b1c6bb37e  \"\\nMore\\nI can't make any real suggestions on ...      0   \n",
-       "4  0001d958c54c6e35  You, sir, are my hero. Any chance you remember...      0   \n",
-       "\n",
-       "   severe_toxic  obscene  threat  insult  identity_hate  \n",
-       "0             0        0       0       0              0  \n",
-       "1             0        0       0       0              0  \n",
-       "2             0        0       0       0              0  \n",
-       "3             0        0       0       0              0  \n",
-       "4             0        0       0       0              0  "
+       "(159571, 8)"
       ]
      },
      "execution_count": 3,
@@ -149,7 +48,7 @@
    ],
    "source": [
     "train_data = pd.read_csv(train_data_path)\n",
-    "train_data.head()"
+    "train_data.shape"
    ]
   },
   {
@@ -164,13 +63,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(159571, 2)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create new train dataframe and save as csv\n",
     "new_train_data = pd.DataFrame({'Comment': comments, 'Labels':labels})\n",
-    "new_train_data.to_csv('train.csv', index=False)"
+    "new_train_data.to_csv('train.csv', index=False)\n",
+    "new_train_data.shape\n",
+    "train_data = pd.read_csv('train.csv')\n",
+    "train_data.shape"
    ]
   },
   {
@@ -360,12 +273,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>\" \\n\\n It says it right there that it IS a typ...</td>\n",
+       "      <td>\" \\r\\n\\r\\n It says it right there that it IS a...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>\" \\n\\n == Before adding a new product to the l...</td>\n",
+       "      <td>\" \\r\\n\\r\\n == Before adding a new product to t...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -377,8 +290,8 @@
        "0  Thank you for understanding. I think very high...       0\n",
        "1                   :Dear god this site is horrible.       0\n",
        "2  \"::: Somebody will invariably try to add Relig...       0\n",
-       "3  \" \\n\\n It says it right there that it IS a typ...       0\n",
-       "4  \" \\n\\n == Before adding a new product to the l...       0"
+       "3  \" \\r\\n\\r\\n It says it right there that it IS a...       0\n",
+       "4  \" \\r\\n\\r\\n == Before adding a new product to t...       0"
       ]
      },
      "execution_count": 8,
@@ -394,12 +307,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "new_test_data.to_csv('test.csv', index = False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -425,7 +345,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
