--- a/feature_extraction/word2vec.ipynb
+++ b/feature_extraction/word2vec.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Abhay\\Anaconda3\\envs\\toxic-comments\\lib\\site-packages\\gensim\\utils.py:1197: UserWarning: detected Windows; aliasing chunkize to chunkize_serial\n",
+      "  warnings.warn(\"detected Windows; aliasing chunkize to chunkize_serial\")\n"
+     ]
+    }
+   ],
    "source": [
     "import gensim\n",
     "import pandas as pd"
@@ -12,17 +21,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "train_data_path = '../data/raw_data/train.csv'\n",
-    "test_data_path = '../data/raw_data/train.csv'"
+    "test_data_path = '../data/raw_data/test.csv'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,94 +41,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Comment</th>\n",
-       "      <th>Labels</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Thank you for understanding. I think very high...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>:Dear god this site is horrible.</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>\"::: Somebody will invariably try to add Relig...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>\" \\n\\n It says it right there that it IS a typ...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>\" \\n\\n == Before adding a new product to the l...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                             Comment  Labels\n",
-       "0  Thank you for understanding. I think very high...       0\n",
-       "1                   :Dear god this site is horrible.       0\n",
-       "2  \"::: Somebody will invariably try to add Relig...       0\n",
-       "3  \" \\n\\n It says it right there that it IS a typ...       0\n",
-       "4  \" \\n\\n == Before adding a new product to the l...       0"
+       "(63978, 2)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_data.head()"
+    "train_data.shape\n",
+    "test_data.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Thank you for understanding. I think very highly of you and would not revert without discussion.'"
+       "\"Explanation\\r\\r\\nWhy the edits made under my username Hardcore Metallica Fan were reverted? They weren't vandalisms, just closure on some GAs after I voted at New York Dolls FAC. And please don't remove the template from the talk page since I'm retired now.89.205.38.27\""
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,30 +94,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = gensim.models.Word2Vec(\n",
-    "        preprocessed_comments,\n",
-    "        size=300,\n",
-    "        window=5,\n",
-    "        min_count=2,\n",
-    "        workers=4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(29781805, 38696790)"
+       "['explanation',\n",
+       " 'why',\n",
+       " 'the',\n",
+       " 'edits',\n",
+       " 'made',\n",
+       " 'under',\n",
+       " 'my',\n",
+       " 'username',\n",
+       " 'hardcore',\n",
+       " 'metallica',\n",
+       " 'fan',\n",
+       " 'were',\n",
+       " 'reverted',\n",
+       " 'they',\n",
+       " 'weren',\n",
+       " 'vandalisms',\n",
+       " 'just',\n",
+       " 'closure',\n",
+       " 'on',\n",
+       " 'some',\n",
+       " 'gas',\n",
+       " 'after',\n",
+       " 'voted',\n",
+       " 'at',\n",
+       " 'new',\n",
+       " 'york',\n",
+       " 'dolls',\n",
+       " 'fac',\n",
+       " 'and',\n",
+       " 'please',\n",
+       " 'don',\n",
+       " 'remove',\n",
+       " 'the',\n",
+       " 'template',\n",
+       " 'from',\n",
+       " 'the',\n",
+       " 'talk',\n",
+       " 'page',\n",
+       " 'since',\n",
+       " 'retired',\n",
+       " 'now']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preprocessed_comments[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_features = 300 # The dimension of the word vector\n",
+    "min_word_count = 3# The minimum word count\n",
+    "num_of_workers = 4 # Number of threads to be used in parallel\n",
+    "context = 10 # The context window size\n",
+    "downsampling = 1e-3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = gensim.models.Word2Vec(\n",
+    "        preprocessed_comments,\n",
+    "        size = num_features,\n",
+    "        window = context,\n",
+    "        min_count = min_word_count,\n",
+    "        workers = num_of_workers,\n",
+    "        sample = downsampling)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(77612448, 101876800)"
+      ]
+     },
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,31 +202,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('bad', 0.6042003631591797),\n",
-       " ('great', 0.5194600820541382),\n",
-       " ('nice', 0.4966406524181366),\n",
-       " ('reasonable', 0.4454898238182068),\n",
-       " ('fine', 0.44109126925468445),\n",
-       " ('best', 0.42743879556655884),\n",
-       " ('valid', 0.42518413066864014),\n",
-       " ('excellent', 0.4204971194267273),\n",
-       " ('useful', 0.4163283705711365),\n",
-       " ('better', 0.40892425179481506)]"
+       "59701"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "w1 = \"good\"\n",
+    "# Vocabulary size\n",
+    "len(model.wv.vocab)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('hi', 0.6357199549674988),\n",
+       " ('hello', 0.5268846750259399),\n",
+       " ('yo', 0.472095251083374),\n",
+       " ('howdy', 0.4563082456588745),\n",
+       " ('dude', 0.45139196515083313),\n",
+       " ('sup', 0.4460800886154175),\n",
+       " ('haha', 0.4426163136959076),\n",
+       " ('mate', 0.4378395080566406),\n",
+       " ('btw', 0.4340026080608368),\n",
+       " ('hahahaha', 0.42958885431289673)]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "w1 = \"hey\"\n",
     "model.wv.most_similar(positive=w1)"
    ]
   },
@@ -228,7 +275,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
