--- a/data/raw_data/data_from_kaggle.ipynb
+++ b/data/raw_data/data_from_kaggle.ipynb
@@ -215,19 +215,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "comments = test_data['comment_text']\n",
+    "comments_unlabelled = comments[test_labels['toxic'] == -1]\n",
     "comments = comments[test_labels['toxic'] >= 0]\n",
     "labels = test_labels[test_labels['toxic'] >= 0]\n",
-    "labels = labels['toxic'] | labels['severe_toxic'] | labels['obscene'] | labels['threat'] | labels['insult'] | labels['identity_hate']"
+    "\n",
+    "labels = labels['toxic'] | labels['severe_toxic'] | labels['obscene'] | labels['threat'] | labels['insult'] | labels['identity_hate']\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -252,62 +254,59 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Comment</th>\n",
-       "      <th>Labels</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Thank you for understanding. I think very high...</td>\n",
-       "      <td>0</td>\n",
+       "      <td>Yo bitch Ja Rule is more succesful then you'll...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>:Dear god this site is horrible.</td>\n",
-       "      <td>0</td>\n",
+       "      <td>== From RfC == \\r\\n\\r\\n The title is fine as i...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>\"::: Somebody will invariably try to add Relig...</td>\n",
-       "      <td>0</td>\n",
+       "      <td>\" \\r\\n\\r\\n == Sources == \\r\\n\\r\\n * Zawe Ashto...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>\" \\r\\n\\r\\n It says it right there that it IS a...</td>\n",
-       "      <td>0</td>\n",
+       "      <td>:If you have a look back at the source, the in...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>\" \\r\\n\\r\\n == Before adding a new product to t...</td>\n",
-       "      <td>0</td>\n",
+       "      <td>I don't anonymously edit articles at all.</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                             Comment  Labels\n",
-       "0  Thank you for understanding. I think very high...       0\n",
-       "1                   :Dear god this site is horrible.       0\n",
-       "2  \"::: Somebody will invariably try to add Relig...       0\n",
-       "3  \" \\r\\n\\r\\n It says it right there that it IS a...       0\n",
-       "4  \" \\r\\n\\r\\n == Before adding a new product to t...       0"
+       "                                             Comment\n",
+       "0  Yo bitch Ja Rule is more succesful then you'll...\n",
+       "1  == From RfC == \\r\\n\\r\\n The title is fine as i...\n",
+       "2  \" \\r\\n\\r\\n == Sources == \\r\\n\\r\\n * Zawe Ashto...\n",
+       "3  :If you have a look back at the source, the in...\n",
+       "4          I don't anonymously edit articles at all."
       ]
      },
-     "execution_count": 8,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "new_test_data = pd.DataFrame({'Comment': comments, 'Labels': labels})\n",
+    "test_data_unlabelled = pd.DataFrame({'Comment': comments_unlabelled})\n",
     "new_test_data = new_test_data.reset_index(drop=True)\n",
-    "new_test_data.head()"
+    "test_data_unlabelled = test_data_unlabelled.reset_index(drop=True)\n",
+    "new_test_data.head()\n",
+    "test_data_unlabelled.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,10 +315,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "test_data_unlabelled.to_csv('unlabelled_test.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "check = pd.read_csv('unlabelled_test.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Comment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Yo bitch Ja Rule is more succesful then you'll...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>== From RfC == \\r\\r\\n\\r\\r\\n The title is fine ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>\" \\r\\r\\n\\r\\r\\n == Sources == \\r\\r\\n\\r\\r\\n * Za...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>:If you have a look back at the source, the in...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>I don't anonymously edit articles at all.</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                             Comment\n",
+       "0  Yo bitch Ja Rule is more succesful then you'll...\n",
+       "1  == From RfC == \\r\\r\\n\\r\\r\\n The title is fine ...\n",
+       "2  \" \\r\\r\\n\\r\\r\\n == Sources == \\r\\r\\n\\r\\r\\n * Za...\n",
+       "3  :If you have a look back at the source, the in...\n",
+       "4          I don't anonymously edit articles at all."
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "check.head()"
+   ]
   },
   {
    "cell_type": "code",
