Cross val for count vectorizer complete with n gram tuning

--- a/model/naive_bayes.ipynb
+++ b/model/naive_bayes.ipynb
@@ -9,10 +9,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd, numpy as np\n",
@@ -21,7 +19,8 @@
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "from scipy import sparse"
+    "from scipy import sparse\n",
+    "import re\n"
    ]
   },
   {
@@ -33,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +41,7 @@
        "pandas.core.frame.DataFrame"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -89,10 +88,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# labels = pd.read_csv('../data/Processed/labels.csv')[\"labels\"]\n",
@@ -108,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -134,20 +131,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "% of 1s in taining data 0.101292596945\n",
+      "% of 1s in taining data 0.10129259694477086\n",
       "% if 1s in test data 0.10191\n",
       "\n",
-      "Precision =  0.694066953928\n",
-      "Recall =  0.596071733561\n",
-      "F_score =  0.64134762634\n",
-      "CCR =  0.921369817022\n",
+      "Precision =  0.6940669539277428\n",
+      "Recall =  0.5960717335610589\n",
+      "F_score =  0.6413476263399693\n",
+      "CCR =  0.9213698170219909\n",
       "\n",
       "Confusion Matrix: \n",
       " [[50698  2838]\n",
@@ -256,7 +253,8 @@
     "\n",
     "precision = confmat[1,1]/(confmat[1,1] + confmat[1,0])\n",
     "recall = confmat[1,1]/(confmat[1,1] + confmat[0,1])\n",
-    "fScore = (2*precision*recall)/(recall+precision)\n",
+    "# fScore = (2*precision*recall)/(recall+precision)\n",
+    "fScore = f1_score(y_true, y_pred, average='weighted')\n",
     "ccr = (confmat[0,0] + confmat[1,1])/(sum(sum(confmat)))\n",
     "\n",
     "print(\"Precision = \",precision)\n",
@@ -613,7 +611,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
