--- a/model/naive_bayes.ipynb
+++ b/model/naive_bayes.ipynb
@@ -10,7 +10,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd, numpy as np\n",
@@ -64,8 +66,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -89,7 +92,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# labels = pd.read_csv('../data/Processed/labels.csv')[\"labels\"]\n",
@@ -463,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -478,7 +483,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['bitxh', 'imma', 'kill', 'way']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "analyze(\"Bitxh imma kill; you a way\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -499,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -556,34 +581,7 @@
      ]
     }
    ],
-   "source": [
-    "# TRAINING\n",
-    "from sklearn.metrics import confusion_matrix\n",
-    "from sklearn.naive_bayes import GaussianNB\n",
-    "clf = GaussianNB()\n",
-    "\n",
-    "clf.fit(train_feature_vectors_full, train_labels)\n",
-    "\n",
-    "# PREDICTION\n",
-    "predictions = clf.predict(test_feature_vectors_full)\n",
-    "\n",
-    "\n",
-    "# PERFORMANCE METRICS\n",
-    "\n",
-    "confmat = confusion_matrix(test_labels, predictions)\n",
-    "\n",
-    "precision = confmat[1,1]/(confmat[1,1] + confmat[1,0])\n",
-    "recall = confmat[1,1]/(confmat[1,1] + confmat[0,1])\n",
-    "fScore = (2*precision*recall)/(recall+precision)\n",
-    "ccr = (confmat[0,0] + confmat[1,1])/(sum(sum(confmat)))\n",
-    "\n",
-    "print(\"Precision = \",precision)\n",
-    "print(\"Recall = \",recall)\n",
-    "print(\"F_score = \",fScore)\n",
-    "print(\"CCR = \",ccr)\n",
-    "print()\n",
-    "print(\"Confusion Matrix: \\n\", confmat)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -611,7 +609,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
