Best parameters tf_idf with logistic regr

--- a/model/count_vectorizer_NB_cross_val.ipynb
+++ b/model/count_vectorizer_NB_cross_val.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd, numpy as np\n",
@@ -23,7 +25,9 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data = pd.read_csv('../data/raw_data/kaggle/train.csv')\n",
@@ -40,7 +44,9 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def review_to_words( corpus ):\n",
@@ -108,7 +114,9 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def cross_val_count_vec(vectorizer, corpus):\n",
@@ -282,15 +290,8 @@
     "import matplotlib.pyplot as plt\n",
     "plt.plot(np.arange(1, 11, 1), fsc, 'r', np.arange(1, 11, 1), prec, 'g', np.arange(1, 11, 1), recall, 'b', ccr, 'm')\n",
     "plt.ylabel('F-score')\n",
-    "plt.show()\n",
-    "\n",
-    "# plt.plot(prec)\n",
-    "# plt.ylabel('Precision')\n",
-    "# plt.show()\n",
-    "\n",
-    "# plt.plot(recall)\n",
-    "# plt.ylabel('Recall')\n",
-    "# plt.show()\n"
+    "legend('F-sc', 'Prec', 'Recall', 'CCR')\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -350,7 +351,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -371,7 +374,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
