Used liblinear solver for tf_idf-logRes cross val

--- a/model/tf_idf_logistic_reg_cross_val.ipynb
+++ b/model/tf_idf_logistic_reg_cross_val.ipynb
@@ -1219,8 +1219,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using liblinear solver"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1396,8 +1403,56 @@
       "[CV]  clf__class_weight=balanced, clf__penalty=l1, score=0.6696982224059528, total=14.0min\n",
       "[CV] clf__class_weight=balanced, clf__penalty=l1 .....................\n",
       "[CV]  clf__class_weight=balanced, clf__penalty=l1, score=0.6801176965111392, total=14.4min\n",
-      "[CV] clf__class_weight=balanced, clf__penalty=l1 .....................\n"
+      "[CV] clf__class_weight=balanced, clf__penalty=l1 .....................\n",
+      "[CV]  clf__class_weight=balanced, clf__penalty=l1, score=0.6771458117890382, total=11.2min\n",
+      "[CV] clf__class_weight=balanced, clf__penalty=l2 .....................\n",
+      "[CV]  clf__class_weight=balanced, clf__penalty=l2, score=0.7467090331366318, total=  12.8s\n",
+      "[CV] clf__class_weight=balanced, clf__penalty=l2 .....................\n",
+      "[CV]  clf__class_weight=balanced, clf__penalty=l2, score=0.748564867967853, total=  10.7s\n",
+      "[CV] clf__class_weight=balanced, clf__penalty=l2 .....................\n",
+      "[CV]  clf__class_weight=balanced, clf__penalty=l2, score=0.7558327558327559, total=  12.5s\n",
+      "[CV] clf__class_weight=balanced, clf__penalty=l2 .....................\n",
+      "[CV]  clf__class_weight=balanced, clf__penalty=l2, score=0.7495946258976142, total=  12.8s\n",
+      "[CV] clf__class_weight=balanced, clf__penalty=l2 .....................\n",
+      "[CV]  clf__class_weight=balanced, clf__penalty=l2, score=0.7566820276497694, total=  10.2s\n",
+      "[CV] clf__class_weight=balanced, clf__penalty=None ...................\n",
+      "[CV]  clf__class_weight=balanced, clf__penalty=None, score=0.0, total=   0.1s\n",
+      "[CV] clf__class_weight=balanced, clf__penalty=None ...................\n",
+      "[CV]  clf__class_weight=balanced, clf__penalty=None, score=0.0, total=   0.1s\n",
+      "[CV] clf__class_weight=balanced, clf__penalty=None ...................\n",
+      "[CV]  clf__class_weight=balanced, clf__penalty=None, score=0.0, total=   0.1s\n",
+      "[CV] clf__class_weight=balanced, clf__penalty=None ...................\n",
+      "[CV]  clf__class_weight=balanced, clf__penalty=None, score=0.0, total=   0.1s\n",
+      "[CV] clf__class_weight=balanced, clf__penalty=None ...................\n",
+      "[CV]  clf__class_weight=balanced, clf__penalty=None, score=0.0, total=   0.1s\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done  30 out of  30 | elapsed: 66.1min finished\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=5, error_score=0.0,\n",
+       "       estimator=Pipeline(memory=None,\n",
+       "     steps=[('tfidf', TfidfTransformer(norm=None, smooth_idf=True, sublinear_tf=False,\n",
+       "         use_idf=False)), ('clf', LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
+       "          intercept_scaling=1, max_iter=100, multi_class='ovr',\n",
+       "          n_jobs=None, penalty='l2', random_state=None, solver='liblinear',\n",
+       "          tol=0.0001, verbose=0, warm_start=False))]),\n",
+       "       fit_params=None, iid='warn', n_jobs=None,\n",
+       "       param_grid={'clf__penalty': ('l1', 'l2', None), 'clf__class_weight': (None, 'balanced')},\n",
+       "       pre_dispatch='2*n_jobs', refit=True, return_train_score='warn',\n",
+       "       scoring=make_scorer(f1_score), verbose=10)"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1410,6 +1465,79 @@
     "grid = GridSearchCV(pipeline, parameters, scoring = make_scorer(f1_score), cv=5, error_score=0.0, verbose=10)\n",
     "\n",
     "grid.fit(train_feature_vectors_sparse, train_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(memory=None,\n",
+       "     steps=[('tfidf', TfidfTransformer(norm=None, smooth_idf=True, sublinear_tf=False,\n",
+       "         use_idf=False)), ('clf', LogisticRegression(C=1.0, class_weight='balanced', dual=False,\n",
+       "          fit_intercept=True, intercept_scaling=1, max_iter=100,\n",
+       "          multi_class='ovr', n_jobs=None, penalty='l2', random_state=None,\n",
+       "          solver='liblinear', tol=0.0001, verbose=0, warm_start=False))])"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid.best_estimator_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision =  0.819522704674\n",
+      "Recall =  0.700127424607\n",
+      "F_score =  0.862446157434\n",
+      "CCR =  0.946164176599\n",
+      "ROC_AUC =  0.889980270448\n",
+      "\n",
+      "Confusion Matrix: \n",
+      " [[51418  2118]\n",
+      " [ 1089  4945]]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "clf = LogisticRegression(C=1.0, class_weight='balanced', dual=False,\n",
+    "          fit_intercept=True, intercept_scaling=1, max_iter=100,\n",
+    "          multi_class='ovr', n_jobs=None, penalty='l2', random_state=None,\n",
+    "          solver='liblinear', tol=0.0001, verbose=0, warm_start=False)\n",
+    "\n",
+    "clf.fit(train_feature_vectors_sparse, train_labels)\n",
+    "\n",
+    "predictions = clf.predict(test_feature_vectors_sparse)\n",
+    "confmat = confusion_matrix(test_labels, predictions)\n",
+    "\n",
+    "precision = confmat[1,1]/(confmat[1,1] + confmat[1,0])\n",
+    "recall = confmat[1,1]/(confmat[1,1] + confmat[0,1])\n",
+    "fScore = f1_score(test_labels, predictions, average='macro')\n",
+    "ccr = (confmat[0,0] + confmat[1,1])/(sum(sum(confmat)))\n",
+    "roc_auc = roc_auc_score(test_labels, predictions)\n",
+    "print(\"Precision = \",precision)\n",
+    "print(\"Recall = \",recall)\n",
+    "print(\"F_score = \",fScore)\n",
+    "print(\"CCR = \",ccr)\n",
+    "print(\"ROC_AUC = \", roc_auc)\n",
+    "print()\n",
+    "print(\"Confusion Matrix: \\n\", confmat)\n",
+    "print()"
    ]
   },
   {
