Changed train and test data

--- a/model/tf_idf_logistic_reg_cross_val.ipynb
+++ b/model/tf_idf_logistic_reg_cross_val.ipynb
@@ -25,21 +25,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 61,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "data = pd.read_csv('../data/raw_data/kaggle/train.csv')\n",
-    "labels=(data[\"toxic\"] | data[\"severe_toxic\"] | data[\"obscene\"] | data[\"threat\"] | data[\"insult\"] | data[\"identity_hate\"])\n",
-    "# labels=data[\"Labels\"]\n",
-    "train_data = data[0:100000]\n",
-    "test_data = data[100001:]\n",
-    "train_labels = labels[0:100000]\n",
-    "test_labels = labels[100001:]\n",
+    "train_data = pd.read_csv('../data/raw_data/kaggle/train.csv')\n",
+    "test_data = pd.read_csv('../data/raw_data/test.csv')\n",
     "\n",
-    "corpus = data[\"comment_text\"]"
+    "train_labels=(train_data[\"toxic\"] | train_data[\"severe_toxic\"] | train_data[\"obscene\"] | train_data[\"threat\"] | train_data[\"insult\"] | train_data[\"identity_hate\"])\n",
+    "test_labels = test_data[\"Labels\"]\n",
+    "\n",
+    "corpus_train = train_data[\"comment_text\"]\n",
+    "corpus_test = test_data[\"Comment\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Comment</th>\n",
+       "      <th>Labels</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Thank you for understanding. I think very high...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>:Dear god this site is horrible.</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>\"::: Somebody will invariably try to add Relig...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>\" \\n\\n It says it right there that it IS a typ...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>\" \\n\\n == Before adding a new product to the l...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                             Comment  Labels\n",
+       "0  Thank you for understanding. I think very high...       0\n",
+       "1                   :Dear god this site is horrible.       0\n",
+       "2  \"::: Somebody will invariably try to add Relig...       0\n",
+       "3  \" \\n\\n It says it right there that it IS a typ...       0\n",
+       "4  \" \\n\\n == Before adding a new product to the l...       0"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_data.head()"
    ]
   },
   {
@@ -51,9 +128,8 @@
    "outputs": [],
    "source": [
     "vectorizer = CountVectorizer(strip_accents='unicode',lowercase=True,stop_words='english', analyzer=\"word\",token_pattern=r'\\w{1,}')\n",
-    "X = vectorizer.fit_transform(corpus)\n",
-    "train_feature_vectors_sparse = X[0:100000]\n",
-    "test_feature_vectors_sparse = X[100001:]"
+    "train_feature_vectors_sparse = vectorizer.fit_transform(corpus_train)\n",
+    "test_feature_vectors_sparse = vectorizer.fit_transform(corpus_test)"
    ]
   },
   {
@@ -412,7 +488,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1228,7 +1306,9 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1470,7 +1550,9 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1495,7 +1577,9 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
