Added code to save confusion heatmap

--- a/model/CharAndWord_N_Grams_LogRes.ipynb
+++ b/model/CharAndWord_N_Grams_LogRes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -208,7 +208,9 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "predictions = classifier.predict(test_features)\n",
@@ -274,6 +276,27 @@
    ],
    "source": [
     "test_features.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "confmat = [[51477,  6258],[  530,  5713]]\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "fig, ax = plt.subplots(figsize=(10,10))         # Sample figsize in inches\n",
+    "\n",
+    "sns.set(font_scale=3.0)\n",
+    "cm = pd.DataFrame(confmat);\n",
+    "sns.heatmap(cm, annot=True, linewidths=.5, ax=ax,fmt='g')\n",
+    "sns.set(font_scale=2.0)\n",
+    "plt.ylabel('True label')\n",
+    "plt.xlabel('Predicted label')\n",
+    "# plt.show()\n",
+    "plt.savefig('../LogRes_CharWord.png')"
    ]
   },
   {
