--- a/model/CountVec_logisticReg_nGram_cross_val.ipynb
+++ b/model/CountVec_logisticReg_nGram_cross_val.ipynb
@@ -20,7 +20,8 @@
     "import re\n",
     "from sklearn.metrics import f1_score\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.feature_extraction.text import TfidfTransformer\n"
+    "from sklearn.feature_extraction.text import TfidfTransformer\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -63,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -618,8 +619,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.metrics import roc_auc_score\n",
@@ -637,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +649,7 @@
        "(159571, 2844402)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +669,7 @@
        "(63978, 2844402)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -677,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -707,8 +710,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed: 15.0min remaining:    0.0s\n",
-      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed: 15.0min finished\n"
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed: 13.8min remaining:    0.0s\n",
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed: 13.8min finished\n"
      ]
     }
    ],
@@ -736,6 +739,27 @@
     "print()\n",
     "print(\"Confusion Matrix: \\n\", confmat)\n",
     "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "fig, ax = plt.subplots(figsize=(10,10))         # Sample figsize in inches\n",
+    "\n",
+    "sns.set(font_scale=3.0)\n",
+    "cm = pd.DataFrame(confmat);\n",
+    "sns.heatmap(cm, annot=True, linewidths=.5, ax=ax,fmt='g')\n",
+    "sns.set(font_scale=2.0)\n",
+    "plt.ylabel('True label')\n",
+    "plt.xlabel('Predicted label')\n",
+    "# plt.show()\n",
+    "plt.savefig('../CV_Logres.png')"
    ]
   },
   {
