--- a/model/countVec_NB_n_gram_cross_val.ipynb
+++ b/model/countVec_NB_n_gram_cross_val.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
        "(63978, 2)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,7 +77,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.pipeline import Pipeline\n",
@@ -613,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -662,6 +664,28 @@
     "print()\n",
     "print(\"Confusion Matrix: \\n\", confmat)\n",
     "print()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "fig, ax = plt.subplots(figsize=(10,10))         # Sample figsize in inches\n",
+    "\n",
+    "sns.set(font_scale=3.0)\n",
+    "cm = pd.DataFrame(confmat);\n",
+    "sns.heatmap(cm, annot=True, linewidths=.5, ax=ax,fmt='g')\n",
+    "sns.set(font_scale=2.0)\n",
+    "plt.ylabel('True label')\n",
+    "plt.xlabel('Predicted label')\n",
+    "# plt.show()\n",
+    "plt.savefig('../CV_NB.png')"
    ]
   },
   {
