--- a/model/logistic_reg_countVec_val.ipynb
+++ b/model/logistic_reg_countVec_val.ipynb
@@ -960,22 +960,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Precision =  0.907095947461\n",
-      "Recall =  0.447067182443\n",
-      "F_score =  0.764696863844\n",
-      "CCR =  0.881459251618\n",
-      "ROC_AUC =  0.892891526168\n",
+      "Precision =  0.907576485664\n",
+      "Recall =  0.445650464055\n",
+      "F_score =  0.763909569573\n",
+      "CCR =  0.880818406327\n",
+      "ROC_AUC =  0.892750743915\n",
       "\n",
       "Confusion Matrix: \n",
-      " [[50731  7004]\n",
-      " [  580  5663]]\n",
+      " [[50687  7048]\n",
+      " [  577  5666]]\n",
       "\n"
      ]
     }
@@ -1012,6 +1012,28 @@
     "print()\n",
     "print(\"Confusion Matrix: \\n\", confmat)\n",
     "print()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "fig, ax = plt.subplots(figsize=(10,10))         # Sample figsize in inches\n",
+    "\n",
+    "sns.set(font_scale=3.0)\n",
+    "cm = pd.DataFrame(confmat);\n",
+    "sns.heatmap(cm, annot=True, linewidths=.5, ax=ax,fmt='g')\n",
+    "sns.set(font_scale=2.0)\n",
+    "plt.ylabel('True label')\n",
+    "plt.xlabel('Predicted label')\n",
+    "# plt.show()\n",
+    "plt.savefig('../LogRes_CV.png')"
    ]
   },
   {
