--- a/model/tf_idf_NB_cross_val.ipynb
+++ b/model/tf_idf_NB_cross_val.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -888,22 +888,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Precision =  0.707512413904\n",
-      "Recall =  0.423368158727\n",
-      "F_score =  0.729636229736\n",
-      "CCR =  0.877426615399\n",
-      "ROC_AUC =  0.801656094368\n",
+      "Precision =  0.798974851834\n",
+      "Recall =  0.445994277539\n",
+      "F_score =  0.752516442075\n",
+      "CCR =  0.883538091219\n",
+      "ROC_AUC =  0.84582846688\n",
       "\n",
       "Confusion Matrix: \n",
-      " [[51719  6016]\n",
-      " [ 1826  4417]]\n",
+      " [[51539  6196]\n",
+      " [ 1255  4988]]\n",
       "\n"
      ]
     }
@@ -933,6 +933,26 @@
     "print()\n",
     "print(\"Confusion Matrix: \\n\", confmat)\n",
     "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "fig, ax = plt.subplots(figsize=(10,10))         # Sample figsize in inches\n",
+    "\n",
+    "sns.set(font_scale=3.0)\n",
+    "cm = pd.DataFrame(confmat);\n",
+    "sns.heatmap(cm, annot=True, linewidths=.5, ax=ax,fmt='g')\n",
+    "sns.set(font_scale=2.0)\n",
+    "plt.ylabel('True label')\n",
+    "plt.xlabel('Predicted label')\n",
+    "# plt.show()\n",
+    "plt.savefig('../tf_NB.png')"
    ]
   },
   {
